--- a/app/src/App.css
+++ b/app/src/App.css
@@ -22,7 +22,8 @@
 
 @media (min-width:768px) {
   .header-dark .navbar {
-    padding-top:.75rem;
+    /* padding-top:.75rem; */
+    padding-top: 0;
     padding-bottom:.75rem;
   }
 }
@@ -174,7 +175,8 @@ body {
 }
 
 .container{
-  margin-top:100px;
+  /* margin-top:100px; */
+  margin-top: 30px;
 }
 .card {
      position: relative;
@@ -373,4 +375,49 @@ li{
 .row-2{
   
   background-color: #28323C !important;
+}
+
+
+.registrationForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+form {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  -webkit-box-shadow: 0px 0px 11px -1px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0px 0px 11px -1px rgba(34, 60, 80, 0.2);
+  box-shadow: 0px 0px 11px -1px rgba(34, 60, 80, 0.2);
+  padding: 20px 0 40px;
+}
+.form__input-field {
+  display: flex;
+  flex-direction: column;
+}
+input {
+  width: 300px;
+  height: 25px;
+  margin-bottom: 10px;
+}
+/* textarea {
+  width: 300px;
+  margin-bottom: 10px;
+} */
+label {
+  margin-bottom: 5px;
+}
+button {
+  height: 50px;
+  width: 200px;
+  margin-top: 20px;
+  background-color: rgb(0, 64, 166);
+  border: none;
+  border-radius: 3px;
+  font-size: 20px;
+  color: white;
 }
