--- a/app/src/App.css
+++ b/app/src/App.css
@@ -10,6 +10,7 @@
   background:url(../public/stadium.jpg) #444;
   background-size:cover;
   padding-bottom:80px;
+  height: 125svh;
 }
 
 @media (min-width:768px) {
@@ -173,6 +174,14 @@
 .header-dark .hero .embed-responsive iframe {
   background-color:#666;
   object-fit: cover;
+}
+
+.hero-link {
+  color: #eaeaea;
+}
+.hero-link:hover {
+  color: #fff;
+  text-decoration: none;
 }
 
 @import url(http://fonts.googleapis.com/css?family=Calibri:400,300,700);
@@ -494,3 +503,82 @@ button {
  .stats span{
   font-size: 29px;
  } */
+
+
+ /* ResultsPage ---------------------------*/
+
+.resultsPage {
+  background: #fff;
+  padding: 10px;
+  border-radius: 3px;
+}
+ .icon-control {
+  margin-top: 5px;
+  float: right;
+  font-size: 80%;
+}
+.btn-light {
+  background-color: #fff;
+  border-color: #e4e4e4;
+}
+.list-menu {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+.list-menu a {
+  color: #343a40;
+}
+.card-product-grid .info-wrap {
+  overflow: hidden;
+  padding: 18px 20px;
+}
+[class*='card-product'] a.title {
+  color: #212529;
+  display: block;
+}
+.card-product-grid:hover .btn-overlay {
+  opacity: 1;
+}
+.card-product-grid .btn-overlay {
+  -webkit-transition: .5s;
+  transition: .5s;
+  opacity: 0;
+  left: 0;
+  bottom: 0;
+  color: #fff;
+  width: 100%;
+  padding: 5px 0;
+  text-align: center;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.5);
+}
+.img-wrap {
+  overflow: hidden;
+  position: relative;
+  height: 150px;
+}
+
+.img-wrap img {
+  object-fit: cover;
+}
+.form--find {
+  width: 92%;
+}
+.fa-search {
+  color: #fff;
+}
+.fa-search span {
+  margin-left: 8px;
+  font-size: 16px;
+}
+.resultsPage-link {
+  color: #fff;
+}
+.resultsPage-link:hover {
+  color: #fff;
+  text-decoration: none;
+}
+.title:hover {
+  text-decoration: none;
+}
